--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 *.gitignore
+/cpp/Physics Engine/.vs/Physics Engine/v17
